--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+node-detect-newline (3.1.0-2) unstable; urgency=medium
+
+  * Team upload
+
+  [ Debian Janitor ]
+  * Apply multi-arch hints.
+    + node-detect-newline: Add Multi-Arch: foreign.
+
+  [ Yadd ]
+  * Bump debhelper from old 12 to 13
+  * Fix GitHub regex
+  * Update standards version to 4.6.0, no changes needed.
+  * Fix filenamemangle
+  * Drop dependency to nodejs
+
+ -- Yadd <yadd@debian.org>  Fri, 26 Nov 2021 09:22:11 +0100
+
 node-detect-newline (3.1.0-1) unstable; urgency=medium
 
   * Team upload
